angular/angular-docker/deploy/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: angular-app
  template:
    metadata:
      labels:
        component: angular-app
      containers:
        - name: app
          image: agung96tm/angular-app
          ports:
            - containerPort: 4000
