angular/angular-docker/deploy/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: ClusterIP
  selector:
    component: angular-app
  ports:
    - port: 4200
      targetPort: 4200
